PI-2036 (#909)
* PI-2036

* PI-2036 update SB and Java versions

* PI-2036 update circle ci config

* PI-2036 fix test